** == Known Issues Planned
	
	**Cleaned up code to be less repetitive
	**Prettify URLs
	**Seperated PlayerProfile PHP code from playerprofile.php
	**Set the title of each page dynamically
	**Made NAV bar more responsive
	**Fixed Nav bug where leaving column header at wrong place
	  will cancel hover.
		*Hard to replicate this	
	**Made Sure the site is suitable for multiple devices
	**Fixed Horizontal scrolling issue
	**Made most read links clickable
	**Made Footer into collapsible menu for smaller device size

	
13/1/18
	-Still Working On Mobile Menu
	
12/1/18
	-Continued work on mobile menu
	
11/1/18
	-Further tweaks and fixes for responsive design
	-Finished 2 of 4 media queries
	-Started on Mobile Navigation
	
	
10/1/18
	-Further tweaks and fixes for responsive design
	
9/1/18
	-Started tweaking the website to be better across devices.
	-Finished 1st part of media queries - Up to 1269px
	
8/1/18
	-Added Upper limit to search by date
	-Added ability to search by term and date	
	-Made Most Read Column function as it sounds
	-Added Hidden View Counter to website
	-Tweaked Appearance of news search from to be similiar to real form
	-Changed background color of page to be correct
	
	Removed Goal - Paginate search results
	
5/1/18
	-Added filter by date to search
	

4/1/18
	-Added Search functionality for news index
	-Added Datepicker front end
	-Tweaks to news index
		-Changed date format to 12 Jan, 2018 from 12-01-2018
	
3/1/18
	-Tweaks to the Tickets Page	
	Removed Goal - Created First Team Fixtures and Results Page
	Removed Goal - Created League Table Page	
	Removed Goal - Created Fans Page
	Removed Goal - Created Shop Page
	Removed Goal - Created the nav bar that exists below the main nav bar
	
2/1/18
	-Created Tickets Page
	
22/12/17
	-Added content to the news section
	-Fixed image when page is resized on news article page
	-Made a most read column for news pages
	-Made Small adjustments to responsive of website across devices