@@ -128,11 +128,6 @@ $(".showNav").click(function() {
     counter %= handlers.length;
 	console.log(counter);
 });		
-
-
-
-
-
 /*
 var teams = "";
 var arrayLength, i, lastClicked, text;
@@ -158,9 +153,14 @@ var stk =  ["Players","Fixtures","League Table"];
 var elements ={ [art]: stk };
 console.log(elements[art]);
 */
-	
+
+	var triangle = "<div class='triangle'>></div>"
 	var backToMainBtn = "<a href='#'><li class='backMainMenu'>Back to Main Menu</li></a>";
 	var backNavBtn = "<a href='#'><li class='backNav'>Previous</li></a>";
+	
+	
+	var newsArray = ["Show All","First Team","Under 20's","Match Reports","Women's Team","Tickets","Commerical","Other",]
+	var newsOtherArray = ["Academy","Publications"];
 	
 	var ticketsArray = ["Home tickets","away tickets","ticket office","new access control","away ticket reg scheme","print @ home","matchday","2017/18 Season Tickets"];
 	
@@ -184,13 +184,16 @@ console.log(elements[art]);
 	var moreFansArray = ["Supporters with Disabilities","Young Hoops Club","Mobile","Supporters",];
 	var youngHoopsClubArray = ["Home","Events","Mascot","Gallery","Competition","Q&A","What Our Members Think"];
 	var mobileArray = ["Celtic View App"];
-	var supportersArray = ["Supporters Liaison Officer","Supporters Charter","Fans Forum","Complaints","Supporters Club"];
+	var supportersArray = ["Supporters Liaison Officer","Supporters Charter","Fans Forum","Complaints","Supporters Club"];		
 	
-	
-	
-	
+	var newsOutput = ""; var newsOtherOutput = ""; var ticketsOutput = "";
 	var matchdayOutput = ""; var hospitalityOutput = ""; var clubOutput = ""; 
 	var clubSocialPoliciesOutput = ""; var clubCorporateOutput = ""; var clubOtherOutput = "";
+	var shopOutput=""; var moreOutput = ""; var youngHoopsClubOutput = ""; var mobileOutput = "";
+	var supportersOutput = "";
+	
+	
+	
 	
 var lastClicked;
 function forwardNav(){
@@ -201,22 +204,58 @@ function forwardNav(){
 		if(lastClicked == 'players'){
 			
 			$( ".navDepth3" ).html( "<a href='#'><li class='backNav'>Back to Teams</li></a><a href='#'><li>First Team</li></a><a href='#'><li>Under 20's</li></a><a href='#'><li>Academy</li></a><a href='#'><li>Women's First Team</li></a><a href='#'><li>Women and Girls</li></a>" );
-			$( ".navDepth3" ).css("background-color","green");
+			
+			
+			
+			$(".nav2").stop().animate({marginLeft:"-33.97rem"});	
+			$(".nav3").stop().animate({marginLeft:"-17rem"});	
+			
+			forwardNav();		
+			backNav();			
 			
 		}else if(lastClicked == 'fixtures'){
 			
-			$( ".navDepth3" ).html( "<a href='#'><li class='backNav'>Back to Teams</li></a><a href='#'><li>First Team</li></a><a href='#'><li>Development Squad</li></a><a href='#'><li>Women's Team</li></a>" );	
+			$( ".navDepth3" ).html( "<a href='#'><li class='backNav'>Back to Teams</li></a><a href='#'><li>First Team</li></a><a href='#'><li>Development Squad</li></a><a href='#'><li>Women's Team</li></a>" );		
+			
+			$(".nav2").stop().animate({marginLeft:"-33.97rem"});	
+			$(".nav3").stop().animate({marginLeft:"-17rem"});
+			
+			forwardNav();		
+			backNav();
 		}
 		else if(lastClicked == 'league-table'){
-			$( ".navDepth3" ).html( "<a href='#'><li class='backNav'>Back to Teams</li></a><a href='#'><li>SPFL Premiership</li></a><a href='#'><li>Development Squad</li></a><a href='#'><li>Women's Team</li></a>" );	
+			$( ".navDepth3" ).html( "<a href='#'><li class='backNav'>Back to Teams</li></a><a href='#'><li>SPFL Premiership</li></a><a href='#'><li>Development Squad</li></a><a href='#'><li>Women's Team</li></a>" );		
 			
+			$(".nav2").stop().animate({marginLeft:"-33.97rem"});	
+			$(".nav3").stop().animate({marginLeft:"-17rem"});
+			
+			forwardNav();		
+			backNav();	
 		
-		}else if(lastClicked == 'matchdayTickets'){			
+		}
+		else if(lastClicked == 'newsOther'){			
+			newsOtherOutput = "";
+			for(var i = 0; i < newsOtherArray.length; i++){
+				newsOtherOutput += "<a href='#'><li>" + newsOtherArray[i] + "</li></a>";
+			}
+			$( ".navDepth3" ).html(backNavBtn + newsOtherOutput);	
+			
+			$(".nav2").stop().animate({marginLeft:"-33.97rem"});	
+			$(".nav3").stop().animate({marginLeft:"-17rem"});
+			
+			forwardNav();		
+			backNav();		
+		}
+		
+		else if(lastClicked == 'matchdayTickets'){			
 		matchdayOutput = "";
 		for(var i = 0; i < matchdayArray.length; i++){
 			matchdayOutput += "<a href='#'><li>" + matchdayArray[i] + "</li></a>";
 		}
-			$( ".navDepth3" ).html(backNavBtn + matchdayOutput);		
+			$( ".navDepth3" ).html(backNavBtn + matchdayOutput);	
+			
+			$(".nav2").stop().animate({marginLeft:"-33.97rem"});	
+			$(".nav3").stop().animate({marginLeft:"-17rem"});		
 			forwardNav();		
 			backNav();
 			
@@ -225,7 +264,10 @@ function forwardNav(){
 		for(var i = 0; i < meetingsArray.length; i++){
 			meetingsOutput += "<a href='#'><li>" + meetingsArray[i] + "</li></a>";
 		}
-			$( ".navDepth3" ).html(backNavBtn + meetingsOutput);		
+			$( ".navDepth3" ).html(backNavBtn + meetingsOutput);	
+			
+			$(".nav2").stop().animate({marginLeft:"-33.97rem"});	
+			$(".nav3").stop().animate({marginLeft:"-17rem"});		
 			forwardNav();		
 			backNav();		
 			
@@ -235,6 +277,9 @@ function forwardNav(){
 			soccerAcademyOutput += "<a href='#'><li>" + soccerAcademyArray[i] + "</li></a>";
 		}
 			$( ".navDepth3" ).html(backNavBtn + soccerAcademyOutput);		
+			
+			$(".nav2").stop().animate({marginLeft:"-33.97rem"});	
+			$(".nav3").stop().animate({marginLeft:"-17rem"});		
 			forwardNav();		
 			backNav();		
 			
@@ -244,6 +289,9 @@ function forwardNav(){
 			clubSocialPoliciesOutput += "<a href='#'><li>" + socialPoliciesArray[i] + "</li></a>";
 		}
 			$( ".navDepth3" ).html(backNavBtn + clubSocialPoliciesOutput);		
+			
+			$(".nav2").stop().animate({marginLeft:"-33.97rem"});	
+			$(".nav3").stop().animate({marginLeft:"-17rem"});		
 			forwardNav();		
 			backNav();		
 			
@@ -253,6 +301,9 @@ function forwardNav(){
 			clubCorporateOutput += "<a href='#'><li>" + corportateArray[i] + "</li></a>";
 		}
 			$( ".navDepth3" ).html(backNavBtn + clubCorporateOutput);		
+			
+			$(".nav2").stop().animate({marginLeft:"-33.97rem"});	
+			$(".nav3").stop().animate({marginLeft:"-17rem"});		
 			forwardNav();		
 			backNav();		
 			
@@ -262,19 +313,62 @@ function forwardNav(){
 			clubOtherOutput += "<a href='#'><li>" + clubOtherArray[i] + "</li></a>";
 		}
 			$( ".navDepth3" ).html(backNavBtn + clubOtherOutput);		
+			
+			$(".nav2").stop().animate({marginLeft:"-33.97rem"});	
+			$(".nav3").stop().animate({marginLeft:"-17rem"});		
 			forwardNav();		
 			backNav();		
 			
+		}else if(lastClicked == 'moreFans'){			
+		moreFansOutput = "";
+		for(var i = 0; i < moreFansArray.length; i++){
+			moreFansOutput += "<a href='#'><li>" + moreFansArray[i] + "</li></a>";
 		}
-
-
-		
+			$( ".navDepth3" ).html(backNavBtn + moreFansOutput);	
+			$(".navDepth3 a li").eq(2).addClass("youngHoopsClub");		
+			$(".navDepth3 a li").eq(3).addClass("mobile");	
+			$(".navDepth3 a li").eq(4).addClass("supporters");			
+			
+			$(".nav2").stop().animate({marginLeft:"-33.97rem"});	
+			$(".nav3").stop().animate({marginLeft:"-17rem"});	
+			forwardNav();		
+			backNav();		
+			
+		}else if(lastClicked == 'youngHoopsClub'){			
+		youngHoopsClubOutput = "";
+		for(var i = 0; i < youngHoopsClubArray.length; i++){
+			youngHoopsClubOutput += "<a href='#'><li>" + youngHoopsClubArray[i] + "</li></a>";
+		}
+			$( ".navDepth4" ).html(backNavBtn + youngHoopsClubOutput);			
+			
+			$(".nav3").stop().animate({marginLeft:"-33.97rem"});	
+			$(".nav4").stop().animate({marginLeft:"-17rem"});
+			forwardNav();		
+			backNav();		
+			
+		}else if(lastClicked == 'mobile'){			
+		mobileOutput = "";
+		for(var i = 0; i < mobileArray.length; i++){
+			mobileOutput += "<a href='#'><li>" + mobileArray[i] + "</li></a>";
+		}
+			$( ".navDepth4" ).html(backNavBtn + mobileOutput);	
+			forwardNav();		
+			backNav();		
+			
+		}else if(lastClicked == 'supporters'){			
+		supportersOutput = "";
+		for(var i = 0; i < supportersArray.length; i++){
+			supportersOutput += "<a href='#'><li>" + supportersArray[i] + "</li></a>";
+		}
+			$( ".navDepth4" ).html(backNavBtn + supportersOutput);	
+			forwardNav();		
+			backNav();			
+		}		
 		else{
 			//$(".navDepth1, .navDepth2, .navDepth3").empty();
 		}
 		
-		//I have some class names I want to dynamically put into a var or something.
-		// ie var whatever button you just pressed, hide that section
+		
 		
 		backNav();
 		lastClicked = "";
@@ -284,43 +378,63 @@ function forwardNav(){
 function backNav(){
 	if(lastClicked == 'backNav'){
 		//$(".navDepth3").empty();
+		$(".nav2").stop().animate({marginLeft:"-17rem"});
+		$(".nav3").stop().animate({marginLeft:"0rem"});
+		$(".nav4").stop().animate({marginLeft:"0rem"});
+		
 		$("."+lastClicked).parent().closest('ul').empty();
 	}else if(lastClicked == 'backMainMenu'){
-		$(".navDepth2,.navDepth3,.navDepth4").empty();		
+		$(".nav1").stop().animate({marginLeft:"0rem"});
+		$(".nav2").stop().animate({marginLeft:"0rem"});		
+		$(".nav3").stop().animate({marginLeft:"0rem"});
+		$(".nav4").stop().animate({marginLeft:"0rem"});
+		
+		$(".navDepth2,.navDepth3,.navDepth4").empty();
 	}else{
 		//Do Nothing
 	}
 };
-//Level 1
-
-	//The Dumb Way
+	
 	$(".teams").click(function(e){
 		
 		$( ".navDepth2" ).html( 
 			"<a href='#' ><li class='backMainMenu'>Back to Main Menu</li></a><a href='#' ><li class='players'>Players</li></a><a href='#'><li class='fixtures'>Fixtures</li></a><a href='#' ><li class='league-table'>League Table</li></a>"
 			);
+			
+		
+		$(".nav1").stop().animate({marginLeft:"-17rem"});
+		$(".nav2").stop().animate({marginLeft:"-17rem"});
 		forwardNav();
 		backNav();
 	});	
 
 	$(".news").click(function(){
-		//This can definitley be cut down
-		$( ".navDepth2" ).html("<a href='#'><li class='backMainMenu'>Back to Main Menu</li></a><a href='#'><li>Show All</li></a><a href='#'><li>First Team</li></a><a href='#'><li>Under 20's</li></a><a href='#'><li>Match Reports</li></a><a href='#'><li>Show All</li></a><a href='#'><li>Women's Team</li></a><a href='#'><li>Ticket's</li></a><a href='#'><li>Commercial</li></a><a href='#'><li class='newsOther'>Other<li></li></a>");
+		for(var i = 0; i < newsArray.length; i++){
+			newsOutput += "<a href='#'><li>" + newsArray[i] + "</li></a>";
+		}		
+		$(".navDepth2").html(backToMainBtn + newsOutput);
+		$(".navDepth2 a li").eq(8).addClass("newsOther");	
 		
-		
-		$( ".navDepth3" ).html("<a href='#'><li class='backNav'>Back to Teams</li><a href='#'><li>Academy</li><a href='#'><li>Publications</li>");	
+		$(".nav1").stop().animate({marginLeft:"-17rem"});
+		$(".nav2").stop().animate({marginLeft:"-17rem"});
 		
 		forwardNav();
 		backNav();
+		newsOutput = "";
 	});
 	
-	var ticketsOutput = "";	
+		
 	$(".tickets").click(function(){
 		for(var i = 0; i < ticketsArray.length; i++){
 			ticketsOutput += "<a href='#'><li>" + ticketsArray[i] + "</li></a>";
 		}		
 		$(".navDepth2").html(backToMainBtn + ticketsOutput);
 		$(".navDepth2 a li").eq(7).addClass("matchdayTickets");		
+		
+		$(".nav1").stop().animate({marginLeft:"-17rem"});
+		$(".nav2").stop().animate({marginLeft:"-17rem"});
+
+		
 		forwardNav();		
 		backNav();		
 		ticketsOutput = "";
@@ -333,7 +447,10 @@ function backNav(){
 			hospitalityOutput += "<a href='#'><li>" + hospitalityArray[i] + "</li></a>";
 		}
 		$(".navDepth2").html(backToMainBtn + hospitalityOutput);
-		$(".navDepth2 a li").eq(3).addClass("meetingsAndEvents");
+		$(".navDepth2 a li").eq(3).addClass("meetingsAndEvents");	
+		
+		$(".nav1").stop().animate({marginLeft:"-17rem"});
+		$(".nav2").stop().animate({marginLeft:"-17rem"});
 		
 		//Nav Depth 2
 		forwardNav();		
@@ -349,7 +466,10 @@ function backNav(){
 		$(".navDepth2 a li").eq(5).addClass("clubSoccerAcademy");
 		$(".navDepth2 a li").eq(6).addClass("clubSocialPolicies");
 		$(".navDepth2 a li").eq(7).addClass("clubCorporate");
-		$(".navDepth2 a li").eq(8).addClass("clubOther");
+		$(".navDepth2 a li").eq(8).addClass("clubOther");	
+		
+		$(".nav1").stop().animate({marginLeft:"-17rem"});
+		$(".nav2").stop().animate({marginLeft:"-17rem"});
 		
 		//Nav Depth 2
 		forwardNav();		
@@ -359,23 +479,33 @@ function backNav(){
 	
 	
 	$(".shop").click(function(){
-		//Nav Depth 1		
+		for(var i = 0; i < shopArray.length; i++){
+			shopOutput += "<a href='#'><li>" + shopArray[i] + "</li></a>";
+		}
+		$(".navDepth2").html(backToMainBtn + shopOutput);	
+		
+		$(".nav1").stop().animate({marginLeft:"-17rem"});
+		$(".nav2").stop().animate({marginLeft:"-17rem"});
+		forwardNav();		
+		backNav();		
+		shopOutput = "";
+				
 	});
 	$(".more").click(function(){
-		//Nav Depth 1	
-		//Nav Depth 2
-		//Nav Depth 3	
+		for(var i = 0; i < moreArray.length; i++){
+			moreOutput += "<a href='#'><li>" + moreArray[i] + "</li></a>";
+		}
+		$(".navDepth2").html(backToMainBtn + moreOutput);		
+		$(".navDepth2 a li").eq(1).addClass("moreFans");	
+		
+		$(".nav1").stop().animate({marginLeft:"-17rem"});
+		$(".nav2").stop().animate({marginLeft:"-17rem"});
+		forwardNav();		
+		backNav();		
+		moreOutput = "";
 	});
-
-
-
-
-
-
-
-
-
-
+	
+	
 });
 
 
